APIs/azure.com/cognitiveservices-TextAnalytics/v2.1/javascript-client/README.md
# text_analytics_client

TextAnalyticsClient - JavaScript client for text_analytics_client
The Text Analytics API is a suite of text analytics web services built with best-in-class Microsoft machine learning algorithms. The API can be used to analyze unstructured text for tasks such as sentiment analysis, key phrase extraction and language detection. No training data is needed to use this API; just bring your text data. This API uses advanced natural language processing techniques to deliver best in class predictions. Further documentation can be found in https://docs.microsoft.com/en-us/azure/cognitive-services/text-analytics/overview
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2.1
- Package version: v2.1
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://azure.microsoft.com/en-us/services/cognitive-services/text-analytics/](https://azure.microsoft.com/en-us/services/cognitive-services/text-analytics/)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install text_analytics_client --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your text_analytics_client from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var TextAnalyticsClient = require('text_analytics_client');

var defaultClient = TextAnalyticsClient.ApiClient.instance;
// Configure API key authorization: apim_key
var apim_key = defaultClient.authentications['apim_key'];
apim_key.apiKey = "YOUR API KEY"
// Uncomment the following line to set a prefix for the API key, e.g. "Token" (defaults to null)
//apim_key.apiKeyPrefix['Ocp-Apim-Subscription-Key'] = "Token"

var api = new TextAnalyticsClient.DetectLanguageApi()
var opts = {
  'showStats': true, // {Boolean} (optional) if set to true, response will contain input and document level statistics.
  'languageBatchInput': new TextAnalyticsClient.LanguageBatchInput() // {LanguageBatchInput} Collection of documents to analyze.
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.detectLanguage(opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://azure.local*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*TextAnalyticsClient.DetectLanguageApi* | [**detectLanguage**](docs/DetectLanguageApi.md#detectLanguage) | **POST** /languages | The API returns the detected language and a numeric score between 0 and 1.
*TextAnalyticsClient.EntitiesApi* | [**entities**](docs/EntitiesApi.md#entities) | **POST** /entities | The API returns a list of recognized entities in a given document.
*TextAnalyticsClient.KeyPhrasesApi* | [**keyPhrases**](docs/KeyPhrasesApi.md#keyPhrases) | **POST** /keyPhrases | The API returns a list of strings denoting the key talking points in the input text.
*TextAnalyticsClient.SentimentApi* | [**sentiment**](docs/SentimentApi.md#sentiment) | **POST** /sentiment | The API returns a numeric score between 0 and 1.


## Documentation for Models

 - [TextAnalyticsClient.DetectedLanguage](docs/DetectedLanguage.md)
 - [TextAnalyticsClient.DocumentStatistics](docs/DocumentStatistics.md)
 - [TextAnalyticsClient.EntitiesBatchResult](docs/EntitiesBatchResult.md)
 - [TextAnalyticsClient.EntitiesBatchResultItem](docs/EntitiesBatchResultItem.md)
 - [TextAnalyticsClient.EntityRecord](docs/EntityRecord.md)
 - [TextAnalyticsClient.ErrorRecord](docs/ErrorRecord.md)
 - [TextAnalyticsClient.ErrorResponse](docs/ErrorResponse.md)
 - [TextAnalyticsClient.InternalError](docs/InternalError.md)
 - [TextAnalyticsClient.KeyPhraseBatchResult](docs/KeyPhraseBatchResult.md)
 - [TextAnalyticsClient.KeyPhraseBatchResultItem](docs/KeyPhraseBatchResultItem.md)
 - [TextAnalyticsClient.LanguageBatchInput](docs/LanguageBatchInput.md)
 - [TextAnalyticsClient.LanguageBatchResult](docs/LanguageBatchResult.md)
 - [TextAnalyticsClient.LanguageBatchResultItem](docs/LanguageBatchResultItem.md)
 - [TextAnalyticsClient.LanguageInput](docs/LanguageInput.md)
 - [TextAnalyticsClient.MatchRecord](docs/MatchRecord.md)
 - [TextAnalyticsClient.MultiLanguageBatchInput](docs/MultiLanguageBatchInput.md)
 - [TextAnalyticsClient.MultiLanguageInput](docs/MultiLanguageInput.md)
 - [TextAnalyticsClient.RequestStatistics](docs/RequestStatistics.md)
 - [TextAnalyticsClient.SentimentBatchResult](docs/SentimentBatchResult.md)
 - [TextAnalyticsClient.SentimentBatchResultItem](docs/SentimentBatchResultItem.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### apim_key


- **Type**: API key
- **API key parameter name**: Ocp-Apim-Subscription-Key
- **Location**: HTTP header

